# nanogpt-experiment

./: README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: gpt_data.yaml  mnist.yaml
configs/logger/: wandb.yaml
configs/model/: mnist.yaml  nano_gpt.yaml
nanogpt/: eval.py  train.py
nanogpt/data/: gpt_datamodule.py
nanogpt/models/: gpt_module.py
nanogpt/models/components/: __init__.py  gpt.py  nn.py
nanogpt/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
notebooks/: 00_initial_nanogpt.ipynb
notebooks/data/tokenizer/: tokenizer_vocab_500.json
tests/: test_datamodules.py  test_eval.py  test_train.py
