[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = "Experimentation with nanoGPT"
authors = ["Bartosz Nawrotek"]
readme = "README.md"

[tool.poetry.scripts]
train_command = "src.train:main"
eval_command = "src.eval:main"


[tool.poetry.dependencies]
python = "^3.10"
# torch = [
#     { version = "~2.1.0", source = "pypi", platform = "darwin" },
#     { version = "~2.1.0", source = "pytorch", platform = "linux" },
#     { version = "~2.1.0", source = "pytorch", platform = "win32" },
# ]
torch = { version = "~2.1.0", source = "pytorch" }
torchvision = "^0.16.2"
torchtext = "^0.16.2"
wandb = "^0.16.1"
portalocker = "^2.8.2"
lightning = "^2.1.3"
hydra-core = "^1.3.2"
pydantic = "^2.5.3"
tokenizers = "^0.15.0"
transformers = "^4.36.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
rootutils = "^1.0.7"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.3"
isort = "^5.13.2"
black = "^23.12.0"
ipykernel = "^6.28.0"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
ipywidgets = "^8.1.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
